stock, product and meeting changes

--- a/src/app/Admin/Location/add-location/add-location.component.html
+++ b/src/app/Admin/Location/add-location/add-location.component.html
@@ -26,7 +26,7 @@
                                                                     Please enter Location Area.
                                                                   </span>
                                                                   <span *ngIf="addLocationForm.get('locationArea')?.errors?.maxlength || addLocationForm.get('locationArea')?.errors?.minlength">
-                                                                    The Location Area must be greater than 10 and less than 50 characters.
+                                                                    The Location Area must be at least 5 characters.
                                                                   </span>
                                                                 </span>
               </div>
