--- a/src/app/Admin/Team/add-team/add-team.component.html
+++ b/src/app/Admin/Team/add-team/add-team.component.html
@@ -83,13 +83,14 @@
                             <label >Start Time:</label>
                             <input type="time" 
                                 class="form-control" 
+                                (change)="startTimeChanges($event)"
                                 formControlName="startTime"
-                                [ngClass]="{'is-invalid': (addTeamForm.get('startTime')?.touched ||
-                            addTeamForm.get('startTime')?.dirty) &&
-                                            !addTeamForm.get('startTime')?.valid }">
+                                [ngClass]="{'is-invalid': (addTeamForm.get('startTime')?.touched || 
+                                addTeamForm.get('startTime')?.dirty)  &&
+                                            !addTeamForm.get('startTime')?.valid}">
                                             <span class="invalid-feedback">
                                               <span *ngIf="addTeamForm.get('startTime')?.errors?.required">
-                                                Please enter Team Start Time.
+                                                Please select start time
                                               </span>
                                             </span>
                         </div>
@@ -100,15 +101,19 @@
                             <input type="time" 
                                 class="form-control" 
                                 value="0" 
+                                (change)="endTimeChanges($event)"
                                 formControlName="endTime"
                                 [ngClass]="{'is-invalid': (addTeamForm.get('endTime')?.touched ||
-                            addTeamForm.get('endTime')?.dirty) &&
-                                            !addTeamForm.get('endTime')?.valid }">
-                                            <span class="invalid-feedback">
-                                              <span *ngIf="addTeamForm.get('endTime')?.errors?.required">
-                                                Please enter Team End Time.
-                                              </span>
-                                            </span>
+                                addTeamForm.get('endTime')?.dirty) &&
+                                                        !addTeamForm.get('endTime')?.valid  || invalidEndTime }">
+                                                        <span class="invalid-feedback">
+                                                          <span *ngIf="addTeamForm.get('endTime')?.errors?.required">
+                                                            Please Select end time.
+                                                          </span>
+                                                          <span *ngIf="invalidEndTime">
+                                                            The end time should be greater than start time
+                                                          </span>
+                                                        </span>
                         </div>
                       </div>
                       <div class="row form-group mt-3">
@@ -149,7 +154,7 @@
 
         <div class="row mt-5">
             <div class="col-12">
-                <button type="button" [disabled]="!addTeamForm.valid" class="btn btn-primary" style="float: right; margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{teamId==0?'Save':'Update'}}</button>
+                <button type="button" [disabled]="!addTeamForm.valid || invalidEndTime" class="btn btn-primary" style="float: right; margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{teamId==0?'Save':'Update'}}</button>
                 <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/team/detail'" >Cancel</button>
             </div>
         </div>
