--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,10 @@
  .navbar-brand {
-    font-weight: 1000;
-    font-stretch: semi-expanded;
+    font-weight: 100;
+    /* font-stretch: semi-expanded; */
     font-size: 3cm;
-    font-style: oblique;
     background-color: darkblue;
     color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     
     
   }
@@ -71,6 +70,7 @@
   .dropdown-toggle {
     outline: 0;
   }
+  
   
   .nav-flush .nav-link {
     border-radius: 0;
