--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-primary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">LOUMAN</a>
+    <!-- <div class="container-fluid"> -->
+        <a class="font-weight-normal navbar-brand navbar-dark bg-primary"  href="#">LOUMAN FARMS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
   
             </ul>
         </div>
-    </div>
+    <!-- </div> -->
   </nav>
   <div class="row">
     <div class="col-lg-2">
