--- a/src/app/product-sub-system/add-product/add-product.component.html
+++ b/src/app/product-sub-system/add-product/add-product.component.html
@@ -49,6 +49,14 @@
                                       <input type="number" class="form-control"  formControlName="price">
                                   </div>
                                 </div>
+                                <div class="row form-group ml-2">
+                                  <div class="col-lg-6 col-md-4 col-sm-8 col-12 form-check ">
+                                    <input class="form-check-input" type="checkbox" [value]="isVatIncluded" id="vatCheckbox" (change)="vatChange($event)">
+                                    <label class="form-check-label" for="vatCheckbox">
+                                      VAT Included
+                                    </label>
+                                  </div>
+                                </div>
                                 <div class="row form-group">
                                     <div class="col-lg-6 col-md-4 col-sm-8 col-12" >
                                         <label >Type:</label>
